# deal-tracker

./: .dockerignore  .editorconfig  .env.example  .flake8  .gitignore  Dockerfile  Pipfile  README.md  config_default.py  docker-compose.yml  manage.py  pyproject.toml
apps/collector/: scrapers.py  worker.py
apps/frontend/: admin.py  apps.py  models.py
apps/frontend/migrations/: 0001_initial.py
apps/frontend/templates/: base.html
apps/frontend/views/: main.py
config/: settings.py  urls.py  wsgi.py
deal_tracker/scrapers/: exceptions.py  models.py  scraper.py  settings.py
deal_tracker/scrapers/shops/: __init__.py  base.py  brack.py  digitec_galaxus.py  jysk.py  toppreise.py  zalando.py
deal_tracker/static/css/app/: login.css  main.css  theme.dark.css  theme.light.css
deal_tracker/static/js/app/: main.js
deal_tracker/templates/: base.html  home.html
deal_tracker/templates/axes/: lockout.html
deal_tracker/templates/django_registration/: activation_complete.html  activation_email_body.txt  activation_email_subject.txt  activation_failed.html  registration_closed.html  registration_complete.html  registration_form.html
deal_tracker/templates/registration/: login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  password_reset_subject.txt
deal_tracker/templates/scraper/: deal_notification_email.html  deal_notification_email.txt
deal_tracker/templates/web/: preferences_form.html  user_delete_form.html  wish_album.html  wish_detail.html  wish_form.html  wish_list.html  worker.html
deal_tracker/web/: admin.py  apps.py  constants.py  forms.py  middleware.py  models.py  services.py  tasks.py  urls.py  utils.py  views.py
deal_tracker/web/migrations/: 0001_initial.py  1000_shop_digitec.py  1001_shop_brack.py  1002_shop_techmania.py  1003_shop_zalando.py  1004_shop_jysk.py  1005_shop_galaxus.py  1006_shop_toppreise.py  1007_remove_shop_techmania.py
deal_tracker/web/templatetags/: custom_filters.py
deal_tracker_config/: asgi.py  build_config.py  celery_app.py  urls.py  wsgi.py
deal_tracker_config/settings/: base.py  development.py  production.py
docs/: README.md  logo.pxd
locale/de/LC_MESSAGES/: django.mo  django.po
tests/: __init__.py  test_scrapers.py
